<resources>
    <string name="app_name">Module7</string>
    <string name="PersonName">Enter your name</string>
    <string name="submit">Submit</string>
    <string name="welcome">Welcome</string>
    <string name="VarName">Name</string>
    <string name="VarVal">Value</string>
    <string name="expression_view">Expression</string>
    <string name="equivalent">=</string>
    <string name="print">Print</string>
    <string name="input">Input</string>
    <string name="start">Start</string>
    <string name="clear">Clear</string>
    <string name="add">+</string>
    <string name="end">End</string>
    <string name="conditions">Conditions</string>
    <string name="math">Math</string>
    <string name="vars">Vars</string>
    <string name="output">Output:</string>
    <string name="condition">if</string>
    <string name="begin">Begin</string>
</resources>