<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/Vars"
        android:iconTint="@color/purple_200"
        android:iconTintMode="src_in"
        android:title="@string/vars" />
    <item
        android:id="@+id/math"
        android:iconTintMode="src_in"
        android:title="@string/math" />
    <item
        android:id="@+id/ifs"
        android:iconTintMode="src_in"
        android:title="@string/conditions" />
    <item
        android:id="@+id/end"
        android:iconTint="@color/purple_200"
        android:iconTintMode="src_in"
        android:title="@string/end" />
    <item
        android:id="@+id/input"
        android:iconTintMode="src_in"
        android:title="@string/input" />
    <item
        android:id="@+id/print"
        android:iconTintMode="src_in"
        android:title="@string/print" />

</menu>