<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="411dp"
        android:layout_height="111dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <Button
            android:id="@+id/btn_clear"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/roundbutton"
            android:text="@string/clear"
            android:textColor="#FFFFFF"
            android:textSize="18sp" />


        <Button
            android:id="@+id/btn_start"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"
            android:background="@drawable/roundbutton"
            android:text="@string/start"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_popup"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:layout_marginHorizontal="30dp"
            android:background="@drawable/roundbutton"
            android:text="@string/add"
            android:textColor="#FFFFFF"
            android:textSize="30sp" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>