<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/mainContainer"
        android:layout_width="315dp"
        android:layout_height="212dp"
        android:background="@color/white"
        android:gravity="center|center_horizontal"
        android:orientation="vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:id="@+id/stringContainer"
            android:layout_width="255dp"
            android:layout_height="59dp"
            android:background="@color/teal_700"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent">


            <EditText
                android:id="@+id/valName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:autofillHints=""
                android:background="@color/white"
                android:hint="@string/VarName"
                android:inputType="textPersonName"
                android:textAlignment="center"
                tools:ignore="TouchTargetSizeCheck" />

            <TextView
                android:id="@+id/equvalent"
                android:layout_width="wrap_content"
                android:layout_height="20dp"
                android:fontFamily="sans-serif-black"
                android:gravity="center|center_vertical"
                android:text="@string/equivalent"
                android:textColor="#FFFFFF"
                android:textSize="18dp" />

            <EditText
                android:id="@+id/expression"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_weight="1"
                android:background="@color/white"
                android:hint="@string/expression_view"
                android:inputType="textPersonName"
                android:singleLine="true"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/teal_700"
                android:textSize="18sp"
                tools:ignore="TouchTargetSizeCheck" />

        </LinearLayout>


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>